@@ -14,9 +14,12 @@ public class CoreRuntimeNativeRegistrar implements RuntimeNativeRegistrar {
 
     @Override
     public void register(AppContext context, RuntimeNativeMetadata metadata) {
+        // jdk.internal.reflect;
         metadata.registerArg("-J--add-opens=java.base/java.lang.invoke=ALL-UNNAMED");
         metadata.registerArg("-J--add-opens=java.base/java.nio=ALL-UNNAMED");
+        metadata.registerArg("-J--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED");
         metadata.registerArg("-J--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED");
+        metadata.registerArg("-J--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED");
 
         metadata.registerArg("-march=compatibility");
     }
